# portfolio-optimiser

./: .gitignore  literature.txt  pyproject.toml
data-samples/: sp500-stocks.csv
src/data/: covariance.py  data.py  features.py
src/server/: app.py
src/server/static/: script.js
src/server/templates/: index.html
src/training/: data_processor.py  loss.py  model.py  oracle.py  trainer.py
tests/: test_covariance.py  test_features.py
