[project]
name = "optimiser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.7.4",
    "matplotlib>=3.10.7",
    "polars>=1.35.2",
    "torch>=2.9.1",
    "yfinance>=0.2.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
